--- a/output/archives.html
+++ b/output/archives.html
@@ -16,12 +16,19 @@
                 <h1><a href="https://leblancfg.github.io/">leblancfg.com </a></h1>
                 <nav><ul>
                     <li><a href="https://leblancfg.github.io/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.github.io/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for leblancfg.com</h1>
 
 <dl>
+    <dt>Wed 30 May 2018</dt>
+    <dd><a href="https://leblancfg.github.io/python-map-function-and-benchmarks-for-exponentials.html">Python's map function, and benchmarks for exponentials</a></dd>
+    <dt>Thu 03 August 2017</dt>
+    <dd><a href="https://leblancfg.github.io/getting-started-with-python-and-jupyter-notebooks-1.html">Introduction to the Python Scientific Ecosystem, Part 1</a></dd>
+    <dt>Thu 03 August 2017</dt>
+    <dd><a href="https://leblancfg.github.io/getting-started-with-python-and-jupyter-notebooks-2.html">Introduction to the Python Scientific Ecosystem, Part 2</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
