--- a/output/tags.html
+++ b/output/tags.html
@@ -16,12 +16,23 @@
                 <h1><a href="https://leblancfg.github.io/">leblancfg.com </a></h1>
                 <nav><ul>
                     <li><a href="https://leblancfg.github.io/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.github.io/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for leblancfg.com</h1>
     <ul>
+        <li><a href="https://leblancfg.github.io/tag/anaconda.html">anaconda</a> (2)</li>
+        <li><a href="https://leblancfg.github.io/tag/beginner.html">beginner</a> (2)</li>
+        <li><a href="https://leblancfg.github.io/tag/benchmarks.html">benchmarks</a> (1)</li>
+        <li><a href="https://leblancfg.github.io/tag/conda.html">conda</a> (2)</li>
+        <li><a href="https://leblancfg.github.io/tag/functional.html">functional</a> (1)</li>
+        <li><a href="https://leblancfg.github.io/tag/jupyter.html">jupyter</a> (3)</li>
+        <li><a href="https://leblancfg.github.io/tag/matplotlib.html">matplotlib</a> (2)</li>
+        <li><a href="https://leblancfg.github.io/tag/numpy.html">numpy</a> (3)</li>
+        <li><a href="https://leblancfg.github.io/tag/python.html">python</a> (3)</li>
+        <li><a href="https://leblancfg.github.io/tag/scipy.html">scipy</a> (2)</li>
     </ul>
 </section>
 
