--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>About</title>
-        <link rel="stylesheet" href="https://leblancfg.github.io/theme/css/main.css" />
-        <link href="https://leblancfg.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
+        <link rel="stylesheet" href="https://leblancfg.com/theme/css/main.css" />
+        <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,10 +13,9 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://leblancfg.github.io/">leblancfg.com </a></h1>
+                <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="https://leblancfg.github.io/pages/about.html">About</a></li>
-                    <li><a href="https://leblancfg.github.io/category/python.html">Python</a></li>
+                    <li class="active"><a href="https://leblancfg.com/pages/about.html">About</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -27,22 +26,11 @@
 <p>In my free time, I enjoy reading (I’m a huge sci-fi nerd), rock climbing, conversation, cycling, musical exploration, and of course anything food-related, from amazing cocktails, weird DIY pickles, to making the perfect pork shoulder. People I look up to include Frank Zappa, Richard Feynman, J.K. Rowling, Peter Norvig, and Geoffrey Hinton. You can find me on Kaggle, facebook, <a href="https://github.com/leblancfg">github</a>, and linkedin.</p>
 </section>
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>links</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://leblancfg.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
