--- a/output/authors.html
+++ b/output/authors.html
@@ -16,12 +16,14 @@
                 <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
                     <li><a href="https://leblancfg.com/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on leblancfg.com</h1>
     <ul>
+        <li><a href="https://leblancfg.com/author/francois-leblanc.html">François Leblanc</a> (3)</li>
     </ul>
 </section>
 
