--- a/output/categories.html
+++ b/output/categories.html
@@ -16,9 +16,11 @@
                 <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
                     <li><a href="https://leblancfg.com/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="social">
