--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -16,6 +16,7 @@
                 <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
                     <li class="active"><a href="https://leblancfg.com/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
