--- a/output/archives.html
+++ b/output/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>leblancfg.com</title>
-        <link rel="stylesheet" href="http://leblancfg.com/theme/css/main.css" />
-        <link href="http://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
+        <link rel="stylesheet" href="https://leblancfg.com/theme/css/main.css" />
+        <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,10 +13,10 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://leblancfg.com/">leblancfg.com </a></h1>
+                <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
-                    <li><a href="http://leblancfg.com/pages/about.html">About</a></li>
-                    <li><a href="http://leblancfg.com/category/python.html">Python</a></li>
+                    <li><a href="https://leblancfg.com/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -24,18 +24,18 @@
 
 <dl>
     <dt>Wed 30 May 2018</dt>
-    <dd><a href="http://leblancfg.com/python-map-function-and-benchmarks-for-exponentials.html">Python's map function, and benchmarks for exponentials</a></dd>
+    <dd><a href="https://leblancfg.com/python-map-function-and-benchmarks-for-exponentials.html">Python's map function, and benchmarks for exponentials</a></dd>
     <dt>Thu 10 August 2017</dt>
-    <dd><a href="http://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html">Introduction to the Python Scientific Ecosystem, Part 2</a></dd>
+    <dd><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html">Introduction to the Python Scientific Ecosystem, Part 2</a></dd>
     <dt>Thu 03 August 2017</dt>
-    <dd><a href="http://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html">Introduction to the Python Scientific Ecosystem, Part 1</a></dd>
+    <dd><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-1.html">Introduction to the Python Scientific Ecosystem, Part 1</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
