--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>About</title>
-        <link rel="stylesheet" href="http://leblancfg.com/theme/css/main.css" />
-        <link href="http://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
+        <link rel="stylesheet" href="https://leblancfg.com/theme/css/main.css" />
+        <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,10 +13,10 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://leblancfg.com/">leblancfg.com </a></h1>
+                <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="http://leblancfg.com/pages/about.html">About</a></li>
-                    <li><a href="http://leblancfg.com/category/python.html">Python</a></li>
+                    <li class="active"><a href="https://leblancfg.com/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -30,7 +30,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
