--- a/output/tags.html
+++ b/output/tags.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>leblancfg.com - Tags</title>
-        <link rel="stylesheet" href="http://leblancfg.com/theme/css/main.css" />
-        <link href="http://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
+        <link rel="stylesheet" href="https://leblancfg.com/theme/css/main.css" />
+        <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,26 +13,26 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://leblancfg.com/">leblancfg.com </a></h1>
+                <h1><a href="https://leblancfg.com/">leblancfg.com </a></h1>
                 <nav><ul>
-                    <li><a href="http://leblancfg.com/pages/about.html">About</a></li>
-                    <li><a href="http://leblancfg.com/category/python.html">Python</a></li>
+                    <li><a href="https://leblancfg.com/pages/about.html">About</a></li>
+                    <li><a href="https://leblancfg.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for leblancfg.com</h1>
     <ul>
-        <li><a href="http://leblancfg.com/tag/anaconda.html">anaconda</a> (2)</li>
-        <li><a href="http://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
-        <li><a href="http://leblancfg.com/tag/benchmarks.html">benchmarks</a> (1)</li>
-        <li><a href="http://leblancfg.com/tag/conda.html">conda</a> (2)</li>
-        <li><a href="http://leblancfg.com/tag/functional.html">functional</a> (1)</li>
-        <li><a href="http://leblancfg.com/tag/jupyter.html">jupyter</a> (3)</li>
-        <li><a href="http://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
-        <li><a href="http://leblancfg.com/tag/numpy.html">numpy</a> (3)</li>
-        <li><a href="http://leblancfg.com/tag/python.html">python</a> (3)</li>
-        <li><a href="http://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
+        <li><a href="https://leblancfg.com/tag/anaconda.html">anaconda</a> (2)</li>
+        <li><a href="https://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
+        <li><a href="https://leblancfg.com/tag/benchmarks.html">benchmarks</a> (1)</li>
+        <li><a href="https://leblancfg.com/tag/conda.html">conda</a> (2)</li>
+        <li><a href="https://leblancfg.com/tag/functional.html">functional</a> (1)</li>
+        <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (3)</li>
+        <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
+        <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (3)</li>
+        <li><a href="https://leblancfg.com/tag/python.html">python</a> (3)</li>
+        <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
     </ul>
 </section>
 
@@ -40,7 +40,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
