forgot filetype for meta files

--- a/output/archives.html
+++ b/output/archives.html
@@ -23,8 +23,6 @@
 <h1>Archives for leblancfg.com</h1>
 
 <dl>
-    <dt>Wed 30 May 2018</dt>
-    <dd><a href="https://leblancfg.com/python-map-function-and-benchmarks-for-exponentials.html">Python's map function, and benchmarks for exponentials</a></dd>
     <dt>Thu 10 August 2017</dt>
     <dd><a href="https://leblancfg.com/getting-started-with-python-and-jupyter-notebooks-2.html">Introduction to the Python Scientific Ecosystem, Part 2</a></dd>
     <dt>Thu 03 August 2017</dt>
@@ -35,9 +33,9 @@
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="https://github.com/leblancfg">Github</a></li>
-                            <li><a href="https://www.kaggle.com/leblancfg">Kaggle</a></li>
-                            <li><a href="https://twitter.com/leblancfg1">Twitter</a></li>
+                            <li><a href="https://github.com/leblancfg">leblancfg on Github</a></li>
+                            <li><a href="https://www.kaggle.com/leblancfg">leblancfg on Kaggle</a></li>
+                            <li><a href="https://twitter.com/leblancfg1">leblancfg1 on Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
