--- a/output/authors.html
+++ b/output/authors.html
@@ -23,7 +23,7 @@
 <section id="content" class="body">
     <h1>Authors on leblancfg.com</h1>
     <ul>
-        <li><a href="https://leblancfg.com/author/francois-leblanc.html">François Leblanc</a> (3)</li>
+        <li><a href="https://leblancfg.com/author/francois-leblanc.html">François Leblanc</a> (2)</li>
     </ul>
 </section>
 
@@ -31,9 +31,9 @@
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="https://github.com/leblancfg">Github</a></li>
-                            <li><a href="https://www.kaggle.com/leblancfg">Kaggle</a></li>
-                            <li><a href="https://twitter.com/leblancfg1">Twitter</a></li>
+                            <li><a href="https://github.com/leblancfg">leblancfg on Github</a></li>
+                            <li><a href="https://www.kaggle.com/leblancfg">leblancfg on Kaggle</a></li>
+                            <li><a href="https://twitter.com/leblancfg1">leblancfg1 on Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
