--- a/output/getting-started-with-python-and-jupyter-notebooks-1.html
+++ b/output/getting-started-with-python-and-jupyter-notebooks-1.html
@@ -1010,8 +1010,7 @@ h6:hover .anchor-link {
 
 .ansi-bold { font-weight: bold; }
 </style>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1022,8 +1021,7 @@ With the rise in popularity of Python as a tool for data analysis, I'd like to s
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1054,8 +1052,7 @@ With the rise in popularity of Python as a tool for data analysis, I'd like to s
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1101,8 +1098,7 @@ The Python language was not originally designed with scientific computing in min
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1133,8 +1129,7 @@ From Wikipedia:</p>
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1161,8 +1156,7 @@ Found 3 packages</code></pre>
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1182,8 +1176,7 @@ Python is not a compiled language, but rather it is interpreted. The standard Py
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1229,9 +1222,9 @@ Python is not a compiled language, but rather it is interpreted. The standard Py
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="https://github.com/leblancfg">Github</a></li>
-                            <li><a href="https://www.kaggle.com/leblancfg">Kaggle</a></li>
-                            <li><a href="https://twitter.com/leblancfg1">Twitter</a></li>
+                            <li><a href="https://github.com/leblancfg">leblancfg on Github</a></li>
+                            <li><a href="https://www.kaggle.com/leblancfg">leblancfg on Kaggle</a></li>
+                            <li><a href="https://twitter.com/leblancfg1">leblancfg1 on Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
