--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -30,9 +30,9 @@
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="https://github.com/leblancfg">Github</a></li>
-                            <li><a href="https://www.kaggle.com/leblancfg">Kaggle</a></li>
-                            <li><a href="https://twitter.com/leblancfg1">Twitter</a></li>
+                            <li><a href="https://github.com/leblancfg">leblancfg on Github</a></li>
+                            <li><a href="https://www.kaggle.com/leblancfg">leblancfg on Kaggle</a></li>
+                            <li><a href="https://twitter.com/leblancfg1">leblancfg1 on Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
