--- a/output/tags.html
+++ b/output/tags.html
@@ -25,13 +25,11 @@
     <ul>
         <li><a href="https://leblancfg.com/tag/anaconda.html">anaconda</a> (2)</li>
         <li><a href="https://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
-        <li><a href="https://leblancfg.com/tag/benchmarks.html">benchmarks</a> (1)</li>
         <li><a href="https://leblancfg.com/tag/conda.html">conda</a> (2)</li>
-        <li><a href="https://leblancfg.com/tag/functional.html">functional</a> (1)</li>
-        <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (3)</li>
+        <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (2)</li>
         <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
-        <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (3)</li>
-        <li><a href="https://leblancfg.com/tag/python.html">python</a> (3)</li>
+        <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (2)</li>
+        <li><a href="https://leblancfg.com/tag/python.html">python</a> (2)</li>
         <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
     </ul>
 </section>
@@ -40,9 +38,9 @@
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="https://github.com/leblancfg">Github</a></li>
-                            <li><a href="https://www.kaggle.com/leblancfg">Kaggle</a></li>
-                            <li><a href="https://twitter.com/leblancfg1">Twitter</a></li>
+                            <li><a href="https://github.com/leblancfg">leblancfg on Github</a></li>
+                            <li><a href="https://www.kaggle.com/leblancfg">leblancfg on Kaggle</a></li>
+                            <li><a href="https://twitter.com/leblancfg1">leblancfg1 on Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
