--- a/higher-level-functions-python-map.html
+++ b/higher-level-functions-python-map.html
@@ -1023,7 +1023,7 @@ Python provides a few higher order (or functional programming) functions in the 
 <li>lambda</li>
 <li>list comprehensions</li>
 </ul>
-<div align="right">*Picture from [SwiftUnboxed](https://swiftunboxed.com/open-source/map/)*</div><p>This article series focuses on exploring these. In this notebook, we'll learn more about the <code>map</code> Python function. I will assume you already know about list expressions, but might not be so familiar with the other four.</p>
+<div align="right"><i>Picture from <a href="https://swiftunboxed.com/open-source/map">SwiftUnboxed</a></i></div><p>This article series focuses on exploring these. In this notebook, we'll learn more about the <code>map</code> Python function. I will assume you already know about list expressions, but might not be so familiar with the other four.</p>
 <p>At first glance <code>map</code> seems a bit redundant — all it does is apply a function to every member in an iterable (list, dict, tuple, set, etc.)? Playing with it though, we'll see that it can be used to tidy up your code, make it more readable, and even give performance gains when used with very large iterables due to its lazy evaluation.</p>
 </div>
 </div>
@@ -1814,7 +1814,7 @@ np.sum(np.square(np.arange(3, 1024**2, dtype='uint32')))
 <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">exponent_1</span><span class="p">(</span><span class="n">n</span><span class="p">,</span> <span class="n">k</span><span class="p">):</span>
     <span class="sd">"""Returns n (* n)... k-1 times"""</span>
-    <span class="c1"># This is super fugly but I don't know how to code it</span>
+    <span class="c1"># This is pretty ugly but I don't know how to code it</span>
     <span class="c1"># without eval(), which is super slow.</span>
     <span class="k">if</span> <span class="n">k</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
         <span class="k">return</span> <span class="n">n</span>
