Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -23,6 +23,8 @@
 <h1>Archives for leblancfg.com</h1>
 
 <dl>
+    <dt>Thu 14 June 2018</dt>
+    <dd><a href="https://leblancfg.com/higher-level-functions-python-filter.html">Higher-level functions in Python, Part 3 - filter</a></dd>
     <dt>Mon 04 June 2018</dt>
     <dd><a href="https://leblancfg.com/higher-level-functions-python-reduce.html">Higher-level functions in Python, Part 2 - reduce</a></dd>
     <dt>Wed 30 May 2018</dt>
