--- a/output/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html
+++ b/output/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html
@@ -134,9 +134,9 @@
 <p>By default, most distributions will install and use the open source GPU drivers called <code>nouveau</code>, which won't cut it with what we've got in mind for this GPU. The hardest and most frustrating part of the installation process is to get the NVIDIA drivers running. I was met with a lot of black screens, flashing cursor bars, and giving up trying to back-fix things from the GRUB console.</p>
 <p>Lots of resources exist out there, but the following have been the most useful in finally making things run:</p>
 <ul>
-<li>[Nvidia CUDA Toolkit driver Install Ubuntu Mint Linux 16.04](https://www.youtube.com/watch?v=_fj4YISX3bw] by (Librebowski](https://www.youtube.com/channel/UCCX3ZAfic1j7BMH-MA2LLbg), specifically his blurb at the beginning about Manjaro</li>
+<li><a href="https://www.youtube.com/watch?v=_fj4YISX3bw">Nvidia CUDA Toolkit driver Install Ubuntu Mint Linux 16.04</a> by <a href="https://www.youtube.com/channel/UCCX3ZAfic1j7BMH-MA2LLbg">Librebowski</a>, specifically his blurb at the beginning about Manjaro</li>
 <li><a href="https://medium.com/@k_efth/deep-learning-in-arch-linux-from-start-to-finish-with-pytorch-tensorflow-nvidia-cuda-9a873c2252ed">Deep Learning Setup in Arch Linux: From Start To Finish with PyTorch + TensorFlow + Nvidia CUDA + Anaconda</a> by <a href="https://medium.com/@k_efth?source=post_header_lockup">Kyriakosi Efthymiadis</a></li>
-<li>The official <a href="https://www.tensorflow.org/install/install_sources">Tensorflow documentation</a> for how to install it from source. Great guide, but some sections are already dated.</li>
+<li>The official <a href="https://www.tensorflow.org/install/install_sources">Tensorflow documentation</a> for how to install it from source. Great guide, but some sections are already dated. Take instructions with a grain of salt.</li>
 </ul>
 <h2>Specs</h2>
 <ul>
