Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -106,6 +106,8 @@
   </header>
   <div>
     <dl>
+      <dt>September 14, 2018</dt>
+      <dd><a href="https://leblancfg.com/unhashable-python-unique-locations-geometry-geodataframe.html">Unhashable in Python - Getting the unique number of locations in a GeoDataFrame</a></dd>
       <dt>August 24, 2018</dt>
       <dd><a href="https://leblancfg.com/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html">Notes on installing CUDA, CuDNN and Tensorflow on Manjaro</a></dd>
       <dt>June 14, 2018</dt>
