--- a/tags.html
+++ b/tags.html
@@ -112,16 +112,19 @@
           <li><a href="https://leblancfg.com/tag/cuda.html">cuda</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/cudnn.html">cudnn</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/functional.html">functional</a> (3)</li>
+          <li><a href="https://leblancfg.com/tag/geopandas.html">geopandas</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gpu.html">GPU</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gtx960.html">GTX960</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/linux.html">linux</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/mutability.html">mutability</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/nvidia.html">nvidia</a> (1)</li>
-          <li><a href="https://leblancfg.com/tag/python.html">python</a> (5)</li>
+          <li><a href="https://leblancfg.com/tag/python.html">python</a> (6)</li>
           <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/shapely.html">shapely</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/tensorflow.html">tensorflow</a> (1)</li>
     </ul>
   </div>
