Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -106,8 +106,11 @@
   </header>
   <div>
     <ul class="list">          <li><a href="https://leblancfg.com/tag/anaconda.html">anaconda</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/arch.html">arch</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/azure.html">azure</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/benchmarks.html">benchmarks</a> (3)</li>
+          <li><a href="https://leblancfg.com/tag/cli.html">cli</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/conda.html">conda</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/cuda.html">cuda</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/cudnn.html">cudnn</a> (1)</li>
@@ -116,8 +119,8 @@
           <li><a href="https://leblancfg.com/tag/gpu.html">GPU</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gtx960.html">GTX960</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (5)</li>
-          <li><a href="https://leblancfg.com/tag/linux.html">linux</a> (1)</li>
-          <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/linux.html">linux</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/mutability.html">mutability</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
