--- a/archives.html
+++ b/archives.html
@@ -106,6 +106,8 @@
   </header>
   <div>
     <dl>
+      <dt>December 03, 2018</dt>
+      <dd><a href="https://leblancfg.com/installing-azure-cli-on-manjaro-arch-with-anaconda.html">Installing the Azure CLI on Manjaro (Arch) with Anaconda</a></dd>
       <dt>September 14, 2018</dt>
       <dd><a href="https://leblancfg.com/unhashable-python-unique-locations-geometry-geodataframe.html">Unhashable in Python - Getting the unique number of locations in a GeoDataFrame</a></dd>
       <dt>August 24, 2018</dt>
