Generate Pelican site

--- a/pages/about.html
+++ b/pages/about.html
@@ -108,7 +108,7 @@
 <p>I’m interested in data, Earth Observation, statistical learning, evolution, biological and theoretical physics, neural networks, food science, and more specifically looking to further explore geospatial analysis, generative algorithms, and adaptive learning.</p>
 <p>I am currently employed at Environment and Climate Change Canada. I previously worked for the Canadian Space Agency and Transport Canada. Before that, I spent many years playing music and tending bar. I have a B.Sc. in Geology, with most senior-level credits in Physics. I am currently pursuing the Data Science postgraduate certificate from UC Irvine Extension. I would like to enroll a graduate program in a field related to Machine Learning sometime in the near future.</p>
 <p>In my free time, I enjoy reading (I’m a huge sci-fi nerd!), rock climbing, conversation, cycling, musical exploration, and of course anything food-related, from amazing cocktails, weird DIY pickles, to making the perfect pork shoulder. I share this passion with my wife, who runs a wonderful <a href="https://squeezemylemon.ca">blog chronicling her culinary experiences</a>. People I look up to include Frank Zappa, Richard Feynman, J.K. Rowling, Peter Norvig, and Geoffrey Hinton. You can find me on <a href="https://www.kaggle.com/leblancfg">Kaggle</a>, <a href="https://github.com/leblancfg">Github</a>, <a href="https://twitter.com/leblancfg1">Twitter</a> and <a href="https://www.linkedin.com/in/françois-leblanc-07294b106">LinkedIn</a>.</p>
-<p>You can take a look at my résumé by clicking <a href="pages/leblancfg_CV.pdf">here</a>.pages/leblancfg_CV.pdf).</p>  </div>
+<p>You can take a look at my résumé by clicking <a href="leblancfg_CV.pdf">here</a>.</p>  </div>
 </article>
 
     <footer>
